--- a/CustomMacroFactory/MainWindow/UserControlEx/TitleBarEx/uTitleBar.xaml
+++ b/CustomMacroFactory/MainWindow/UserControlEx/TitleBarEx/uTitleBar.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.TitleBarEx" xmlns:titlebarbuttonex="clr-namespace:CustomMacroBase.CustomControlEx.TitleBarButtonEx;assembly=CustomMacroBase"
+             xmlns:local="clr-namespace:CustomMacroFactory.MainWindow.UserControlEx.TitleBarEx" 
+             xmlns:titlebarbuttonex="clr-namespace:CustomMacroBase.CustomControlEx.TitleBarButtonEx;assembly=CustomMacroBase"
              mc:Ignorable="d" 
              MinWidth="240"
              d:MinWidth="240">
