--- a/DS4Windows.UI/Control/CustomStyleEx/GroupBoxEx/cGroupBox_style.xaml
+++ b/DS4Windows.UI/Control/CustomStyleEx/GroupBoxEx/cGroupBox_style.xaml
@@ -1,5 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="clr-namespace:DS4WinWPF.UI.Control.CustomStyleEx.GroupBoxEx">
+
+    <local:cGroupBox_converter_header2string x:Key="cGroupBox_converter_header2string"/>
+
     <!-- Brushes -->
     <SolidColorBrush x:Key="BorderColor" Color="#FF3F3F46" />
 
@@ -37,7 +41,7 @@
                             </Border>
                         </Border>
                         <Border x:Name="Header" Grid.Column="1" Padding="3,1,3,0" Grid.RowSpan="2" Grid.Row="0">
-                            <ContentPresenter ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            <ContentPresenter Content="{TemplateBinding Header, Converter={StaticResource cGroupBox_converter_header2string}}" ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                         </Border>
                         <ContentPresenter Grid.ColumnSpan="2" Grid.Column="1" Margin="{TemplateBinding Padding}" Grid.Row="2" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                     </Grid>
