--- a/DS4Windows/DS4Forms/LogMessageDisplay.xaml
+++ b/DS4Windows/DS4Forms/LogMessageDisplay.xaml
@@ -15,6 +15,14 @@
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Right">
             <Button x:Name="okayButton" Content="OK" MinWidth="60" Click="OkayButton_Click" />
         </StackPanel>
-        <RichTextBox x:Name="richMessageBox" DockPanel.Dock="Top" IsReadOnly="True" IsDocumentEnabled="True" BorderBrush="{x:Null}" BorderThickness="0" HorizontalContentAlignment="Stretch" VerticalAlignment="Center"/>
+        <RichTextBox x:Name="richMessageBox" DockPanel.Dock="Top" IsReadOnly="True" IsDocumentEnabled="True" BorderBrush="{x:Null}" BorderThickness="0" HorizontalContentAlignment="Stretch" VerticalAlignment="Center">
+            <RichTextBox.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Cut" Command="ApplicationCommands.Cut" IsEnabled="False"/>
+                    <MenuItem Header="Copy" Command="ApplicationCommands.Copy"/>
+                    <MenuItem Header="Paste" Command="ApplicationCommands.Paste" IsEnabled="False"/>
+                </ContextMenu>
+            </RichTextBox.ContextMenu>
+        </RichTextBox>
     </DockPanel>
 </Window>
